--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.datasource.generate-unique-name=false
-spring.datasource.name=tacocloud
-spring.h2.console.enabled=true
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/myproject
+spring.datasource.username=root
+spring.datasource.password=11111
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
